Deployment-Canary/deployment-version1.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubeapp-production
  annotations:
    app.gitlab.com/app: CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: CI_ENVIRONMENT_SLUG
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dizertatie
      version: "1"
  template:
    metadata:
      name: kubeapp
      labels:
        app: dizertatie
        version: "1"
      annotations:
        app.gitlab.com/app: CI_PROJECT_PATH_SLUG
        app.gitlab.com/env: CI_ENVIRONMENT_SLUG
    spec:
      containers:
        - name: kubeapp
          image: ebieusebiu/dizertatie:version1
          imagePullPolicy: Always
          ports:
            - name: kubeapp
              containerPort: 7000
