Deployment-Canary/ingress-version1.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dizertatie-ingress-version1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dizertatie.com
      http:
        paths:
          - backend:
              serviceName: dizertatie-service-version1
              servicePort: 80
